# todo-platform

./: .env.example  .gitignore  HANDOFF.md  README.md  docker-compose.yml  pyproject.toml  render.yaml
app/: config.py  db.py  dependencies.py  main.py  models.py  schemas.py
app/api/routes/: auth.py  internal.py  reminders.py  slack.py  tasks.py
app/repositories/: memory.py  sqlalchemy_repo.py
app/services/: google_auth.py  google_calendar_client.py  google_sync.py  parser.py  slack_auth.py  slack_client.py  slack_service.py  task_service.py
app/workers/: job_worker.py  reminder_worker.py
migrations/: 001_initial_schema.sql  002_processed_slack_events.sql
tests/: test_external_services.py  test_parser.py  test_task_service.py  test_workers.py
