[project]
name = "todo-platform"
version = "0.2.0"
description = "Natural language task manager with Google Calendar and Slack integration"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "sqlalchemy>=2.0.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-dateutil>=2.9.0",
  "pytz>=2024.1",
  "psycopg[binary]>=3.2.0",
  "alembic>=1.13.0",
  "redis>=5.0.0",
  "python-multipart>=0.0.9"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0"
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["migrations*", "tests*"]